<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="550sp"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_task1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dm_sans"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dm_sans"
            android:layout_marginStart="25sp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_textview"
            android:padding="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_a_task" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dm_sans"
            android:layout_marginStart="25sp"
            android:layout_marginTop="20dp"
            />

            <EditText
                android:id="@+id/date"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"
                android:drawableRight="@drawable/date"
                android:padding="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:hint="Select Date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/dm_sans"
                android:layout_marginStart="25sp"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/dm_sans"
                android:layout_marginStart="65sp"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/time"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_textview"
                android:padding="10dp"/>

            <EditText
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_textview"
                android:padding="10dp"
                tools:ignore="Autofill,TextFields" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dm_sans"
            android:layout_marginStart="25sp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_textview"
            android:padding="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="100sp"
                android:layout_height="30sp"
                android:background="@drawable/btn_cancel"
                android:text="@string/cancel"
                android:textSize="8sp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="60dp"
                />

            <Button
                android:layout_width="90sp"
                android:layout_height="30sp"
                android:text="@string/create"
                android:textSize="8sp"
                android:background="@drawable/btn_create"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"

                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>